tests/baselines/reference/unusedModuleInModule.errors.txt
unusedModuleInModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
unusedModuleInModule.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
unusedModuleInModule.ts(2,12): error TS6133: 'B' is declared but its value is never read.


==== unusedModuleInModule.ts (3 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        module B {}
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS6133: 'B' is declared but its value is never read.
    }